--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <module>kafka-basics</module>
       <module>kafka-producer-wikimedia</module>
       <module>kafka-consumer-opensearch</module>
+      <module>kafka-streams-wikimedia</module>
   </modules>
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
