--- a/kafka-streams-wikimedia/pom.xml
+++ b/kafka-streams-wikimedia/pom.xml
@@ -9,4 +9,16 @@
     <artifactId>kafka-streams-wikimedia</artifactId>
     <name>Archetype - kafka-streams-wikimedia</name>
     <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+    </dependencies>
 </project>
